sign-up system modified

--- a/views/user/sign-up.hbs
+++ b/views/user/sign-up.hbs
@@ -2,16 +2,18 @@
   <div class="row">
     <div class="col-md-6 m-auto">
       <h2 class="text-center font-weight-bold">Create new account</h2>
+      
       <form action="/sign-up" method="post">
         <div class="form-group">
-          <label for="Username">Username</label>
-          <input name="userName" type="text" class="form-control" id="Username" placeholder="Enter name">
+          <label for="name">Name</label>
+          <input name="name" type="text" class="form-control" id="Username" placeholder="Enter name">
         </div>
         <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input name="userEmail" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-            placeholder="Enter email">
-          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+
+          <label for="userName">User name</label>
+          <input name="userName" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+            placeholder="create an user name">
+          
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
