--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -29,7 +29,7 @@
                 <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     {{#if user}}
-                    {{user.userName}}
+                    {{user.name}}
                     {{else}}
                     account
                     {{/if}}
