--- a/views/user/user-login.hbs
+++ b/views/user/user-login.hbs
@@ -2,14 +2,15 @@
   <div class="row">
     <div class="col-md-6 m-auto">
       <h2 class="text-center font-weight-bold">Login</h2>
+
       <form action="/login" method="post">
        {{#if loginErr}}
       <p class="text-danger">{{loginErr}}</p>
       {{/if}}
         <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input name="userEmail" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-            placeholder="Enter email">
+          <label for="userName">User name</label>
+          <input name="userName" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+            placeholder="Enter user name">
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
@@ -20,6 +21,7 @@
           <button type="submit" class="btn btn-primary float-right ">Login</button>
         </div>
       </form>
+
     </div>
   </div>
 </div>
